fix: fixes for top/bottom spacing for cards-scroll

--- a/wp-content/themes/sumzim2022/src/scss/main/layouts/_home-page.scss
+++ b/wp-content/themes/sumzim2022/src/scss/main/layouts/_home-page.scss
@@ -5,6 +5,9 @@
 .page-home,
 .page-home-preview {
 	.homepage-hero + .staff-slider {
-		// margin-top: -80px;
+		@include breakpoint(large) {
+			margin-bottom: 0;
+		}
 	}
+
 }
